feat: standardize contact information, improve UI/UX, remove Lovable branding, apply color consistency

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <meta property="og:url" content="https://abhidhcreative.com/" />
     <meta property="og:title" content="Abhidh Creative - Digital Marketing & IT Solutions" />
     <meta property="og:description" content="Transform your digital presence with Abhidh Creative. Expert digital marketing, web development, and creative services in Nepal." />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/og-image.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://abhidhcreative.com/" />
     <meta name="twitter:title" content="Abhidh Creative - Digital Marketing & IT Solutions" />
     <meta name="twitter:description" content="Transform your digital presence with Abhidh Creative. Expert digital marketing, web development, and creative services in Nepal." />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/og-image.png" />
 
     <link rel="canonical" href="https://abhidhcreative.com/" />
   </head>
